--- a/bookdit/templates/bookdit/index.html
+++ b/bookdit/templates/bookdit/index.html
@@ -1,54 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
+{% extends "bookdit/_layout.html" %}
 
-        <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-        Remove this if you use the .htaccess -->
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-        <title>index</title>
-        <meta name="description" content="">
-        <meta name="author" content="Chris Martin">
-
-        <meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-        <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-        <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    </head>
-
-    <body>
-        <div>
-            <header>
-                <h1>index</h1>
-            </header>
-            <nav>
-                <p>
-                    <a href="/">Home</a>
-                </p>
-                <p>
-                    <a href="/contact">Contact</a>
-                </p>
-            </nav>
-
-            <div>
-                {% if vendor_list %}
-                <ul>
-                    {% for vendor in vendor_list %}
-                        <li>{{ vendor.name }}</li>
-                    {% endfor %}
-                </ul>
-                {% else %}
-                    <p>No Vendors!</p>
-                {%endif %}
-            </div>
-
-            <footer>
-                <p>
-                    &copy; Copyright  by Chris Martin
-                </p>
-            </footer>
-        </div>
-    </body>
-</html>
+{% block content %}
+	<!-- Show error if there is one -->
+	{% if error_message %}
+	<p>{{error_message}}</p>
+	{% endif %}
+	
+	<!-- Login form -->
+	<form action="" method="post">
+		{% csrf_token %}
+		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+			<input class="mdl-textfield__input" type="text" id="login_username">
+			<label class="mdl-textfield__label" for="login_username">Username</label>
+		</div>
+		
+		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+			<input class="mdl-textfield__input" type="text" id="login_password">
+			<label class="mdl-textfield__label" for="login_password">Password</label>
+		</div>
+		
+		<button class="mdl-button mdl-js-button mdl-button--primary">
+		  Login
+		</button>
+	</form>
+	
+	
+{% endblock %}
