--- a/bookdit/templates/bookdit/_layout.html
+++ b/bookdit/templates/bookdit/_layout.html
@@ -20,7 +20,8 @@
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-blue.min.css" />
-        <link rel="stylesheet" type="text/css" href="{% static 'bookdit/site.css' %}" />
+        <!--<link rel="stylesheet" type="text/css" href="{% static 'bookdit/site.css' %}" />-->
+        <link rel="stylesheet" type="text/css" href="/static/bookdit/site.css" />
     </head>
 
     <body>
