--- a/bookdit/templates/bookdit/home/login.html
+++ b/bookdit/templates/bookdit/home/login.html
@@ -7,15 +7,15 @@
 	{% endif %}
 	
 	<!-- Login form -->
-	<form action="" method="post">
+	<form action="{% url 'bookdit:login' %}" method="post">
 		{% csrf_token %}
 		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-			<input class="mdl-textfield__input" type="text" id="login_username">
+			<input class="mdl-textfield__input" type="text" id="login_username" name="login_username">
 			<label class="mdl-textfield__label" for="login_username">Username</label>
 		</div>
 		
 		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-			<input class="mdl-textfield__input" type="text" id="login_password">
+			<input class="mdl-textfield__input" type="text" id="login_password" name="login_password">
 			<label class="mdl-textfield__label" for="login_password">Password</label>
 		</div>
 		
