--- a/bookdit/templates/bookdit/_layout.html
+++ b/bookdit/templates/bookdit/_layout.html
@@ -34,10 +34,16 @@
 		      <div class="mdl-layout-spacer"></div>
 		      <!-- Navigation. We hide it in small screens. -->
 		      <nav class="mdl-navigation mdl-layout--large-screen-only">
-		        <a class="mdl-navigation__link" href="">Link</a>
-		        <a class="mdl-navigation__link" href="">Link</a>
-		        <a class="mdl-navigation__link" href="">Link</a>
-		        <a class="mdl-navigation__link" href="">Link</a>
+		        <a class="mdl-navigation__link" href="">
+                    {% if request.user.is_authenticated %}
+                        <form action="{% url 'bookdit:logout_view' %}" method="POST">
+                            {% csrf_token %}
+                            <button class="mdl-button mdl-js-button mdl-button--primary">
+                                Logout
+                            </button>
+                        </form>
+                    {% endif %}
+                </a>
 		      </nav>
 		    </div>
 		  </header>
