--- a/bookdit/templates/bookdit/_layout.html
+++ b/bookdit/templates/bookdit/_layout.html
@@ -2,81 +2,92 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-        <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-        Remove this if you use the .htaccess -->
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+    Remove this if you use the .htaccess -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  
+    <title>index</title>
+    <meta name="description" content="">
+    <meta name="author" content="Chris Martin">
+  
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+  
+    <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-blue.min.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'site.css' %}" />
+  </head>
 
-        <title>index</title>
-        <meta name="description" content="">
-        <meta name="author" content="Chris Martin">
+  <body>
+    <!-- COMMON HEADER -->
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">BookdIt</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+          <!-- Navigation. We hide it in small screens. -->
+          <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <a class="mdl-navigation__link" href="">
+              {% if request.user.is_authenticated %}
+                <form action="{% url 'bookdit:logout_request' %}" method="POST">
+                  {% csrf_token %}
+                  <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                    Logout {{ request.user.username }}
+                  </button>
+                </form>
+              {% endif %}
+            </a>
+          </nav>
+        </div>
+      </header>
+      
+      <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+        <span class="mdl-layout-title">Title</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Link</a>
+        </nav>
+      </div>
+      
+      <main class="mdl-layout__content">
+        <div class="page-content">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </main>
+    </div>
+  </body>
 
-        <meta name="viewport" content="width=device-width; initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 
-        <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-        <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-blue.min.css" />
-        <link rel="stylesheet" type="text/css" href="{% static 'site.css' %}" />
-    </head>
+  <!-- TOP LEVEL JS FUNCTIONS -->
+  <script type="text/javascript">
+    $(document).on("click", "li", function() {
+      alert("clicked");
+    });
+  </script>
+  
+  <!-- VIEW SPECIFIC JS FUNCTIONS -->
+  {% block scripts %}
+  {% endblock %}
+  
+  <!-- END LEVEL JS FUNCTION -->
+  <script type="text/javascript">
+  
+  </script>
 
-    <body>
-		<!-- COMMON HEADER -->
-		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-		  <header class="mdl-layout__header">
-		    <div class="mdl-layout__header-row">
-		      <!-- Title -->
-		      <span class="mdl-layout-title">BookdIt</span>
-		      <!-- Add spacer, to align navigation to the right -->
-		      <div class="mdl-layout-spacer"></div>
-		      <!-- Navigation. We hide it in small screens. -->
-		      <nav class="mdl-navigation mdl-layout--large-screen-only">
-		        <a class="mdl-navigation__link" href="">
-                    {% if request.user.is_authenticated %}
-                        <form action="{% url 'bookdit:logout_request' %}" method="POST">
-                            {% csrf_token %}
-                            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
-				Logout
-			    </button>
-                        </form>
-                    {% else %}
-                        
-                    {% endif %}
-                </a>
-		      </nav>
-		    </div>
-		  </header>
-		  <div class="mdl-layout__drawer">
-		    <span class="mdl-layout-title">Title</span>
-		    <nav class="mdl-navigation">
-		      <a class="mdl-navigation__link" href="">Link</a>
-		      <a class="mdl-navigation__link" href="">Link</a>
-		      <a class="mdl-navigation__link" href="">Link</a>
-		      <a class="mdl-navigation__link" href="">Link</a>
-		    </nav>
-		  </div>
-		  <main class="mdl-layout__content">
-		    <div class="page-content">
-		    	{% block content %}
-				{% endblock %}
-		    </div>
-		  </main>
-		</div>
-    </body>
-    
-    <script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
-    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    
-    <!-- TOP LEVEL JS FUNCTIONS -->
-    <script type="text/javascript">
-    	$(document).on("click", "li", function() {
-    		alert("clicked");
-    	});
-    </script>
-    
 </html>
 
 
