--- a/bookdit/templates/bookdit/home/index.html
+++ b/bookdit/templates/bookdit/home/index.html
@@ -1,5 +1,23 @@
 {% extends "bookdit/_layout.html" %}
 
 {% block content %}
+  <!-- MapBox via Leaflet -->
+  <div id="map_main"></div>
+  
+  
+{% endblock %}
+
+
+<!-- INJECT SCRIPTS INTO LAYOUT -->
+{% block scripts %}
+  <script type="text/javascript">
+    var mymap = L.map('map_main').setView([51.505, -0.09], 13);
     
+    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+    //attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+    maxZoom: 18,
+    id: 'mapbox.satellite',
+    accessToken: 'pk.eyJ1IjoibWFuZ29kdWRlbWFydGluIiwiYSI6ImNpa2x1N2JyMjBscGN0aWo3bXJwZzBqOWYifQ.9liaTsDWxl8wrA0x80njtg'
+}).addTo(mymap);
+  </script>
 {% endblock %}
