--- a/bookdit/templates/bookdit/home/login.html
+++ b/bookdit/templates/bookdit/home/login.html
@@ -1,28 +1,45 @@
 {% extends "bookdit/_layout.html" %}
 
 {% block content %}
-	<!-- Show error if there is one -->
-	{% if error_message %}
-	<p>{{error_message}}</p>
-	{% endif %}
+<div class="mdl-grid">
+	<div class="mdl-cell mdl-cell--12-col">
+		<!-- Show error if there is one -->
+		{% if error_message %}
+			<p>{{error_message}}</p>
+		{% else %}
+			<p>Please login to BookdIt:</p>
+		{% endif %}
+	</div>
+</div>
+
+<!-- Login form -->
+<form action="{% url 'bookdit:login_request' %}" method="post">
+{% csrf_token %}
+	<div class="mdl-grid">
+		<div class="mdl-cell mdl-cell--12-col">
+		
+			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				<input class="mdl-textfield__input" type="text" id="login_username" name="login_username">
+				<label class="mdl-textfield__label" for="login_username">Username</label>
+			</div>
+		</div>
+		
+		<div class="mdl-cell mdl-cell--12-col">
+			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				<input class="mdl-textfield__input" type="text" id="login_password" name="login_password">
+				<label class="mdl-textfield__label" for="login_password">Password</label>
+			</div>
+		</div>
+		
+		<div class="mdl-cell mdl-cell--12-col">
+			<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+				Login
+			</button>
+		</div>
+		
+	</div>
+</form>
 	
-	<!-- Login form -->
-	<form action="{% url 'bookdit:login_request' %}" method="post">
-		{% csrf_token %}
-		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-			<input class="mdl-textfield__input" type="text" id="login_username" name="login_username">
-			<label class="mdl-textfield__label" for="login_username">Username</label>
-		</div>
-		
-		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-			<input class="mdl-textfield__input" type="text" id="login_password" name="login_password">
-			<label class="mdl-textfield__label" for="login_password">Password</label>
-		</div>
-		
-		<button class="mdl-button mdl-js-button mdl-button--primary">
-		  Login
-		</button>
-	</form>
 	
 	
 {% endblock %}
