--- a/bookdit/static/site.css
+++ b/bookdit/static/site.css
@@ -1,12 +1,15 @@
-.body-content {
-	margin-top:35px;
-}
-
 /* Leaflet Maps */
 #map_main {
-	position:absolute;
-	left:0;
-	right:0;
-	top:0;
-	bottom:0;
+	height:200px;
+	width:100%;
+}
+
+
+/* MDL Overrides */
+.page-content {
+	margin-left:auto;
+	margin-right:auto;
+}
+.mdl-grid {
+	max-width:100%;
 }
