--- a/bookdit/static/site.css
+++ b/bookdit/static/site.css
@@ -1,15 +1,29 @@
-/* Leaflet Maps */
-#map_main {
-	height:200px;
-	width:100%;
+@media screen and (min-width:480px) {
+	#map_main {
+		height:500px;
+	}
+}
+@media screen and (max-width:1024px) {
+	#map_main {
+		height:350px;
+	}
+}
+@media screen and (max-width:480px) {
+	#map_main {
+		height:200px;
+	}
+}
+
+/* General Styles */
+.no-padding {
+	padding:0;
+}
+.no-margin {
+	margin:0;
 }
 
 
 /* MDL Overrides */
-.page-content {
-	margin-left:auto;
-	margin-right:auto;
-}
-.mdl-grid {
-	max-width:100%;
+.mdl-cell {
+	background-color:#e0e0e0;
 }
