--- a/bookdit/templates/bookdit/_layout.html
+++ b/bookdit/templates/bookdit/_layout.html
@@ -13,11 +13,12 @@
     <meta name="description" content="">
     <meta name="author" content="Chris Martin">
   
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
     <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-blue.min.css" />
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
@@ -39,7 +40,7 @@
               {% if request.user.is_authenticated %}
                 <form action="{% url 'bookdit:logout_request' %}" method="POST">
                   {% csrf_token %}
-                  <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+                  <button class="mdl-button mdl-js-button">
                     Logout {{ request.user.username }}
                   </button>
                 </form>
@@ -50,12 +51,20 @@
       </header>
       
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <span class="mdl-layout-title">Title</span>
+        <span class="mdl-layout-title">Bookdit</span>
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
-          <a class="mdl-navigation__link" href="">Link</a>
+          <a class="mdl-navigation__link" href="">Favorites</a>
+          <a class="mdl-navigation__link" href="">My Account</a>
+          <a class="mdl-navigation__link" href="">
+          {% if request.user.is_authenticated %}
+              <form action="{% url 'bookdit:logout_request' %}" method="POST">
+                {% csrf_token %}
+                <button class="mdl-button mdl-js-button">
+                  Logout {{ request.user.username }}
+                </button>
+              </form>
+            {% endif %}
+          </a>
         </nav>
       </div>
       
@@ -66,17 +75,18 @@
         </div>
       </main>
     </div>
+    
+  
   </body>
 
   <script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 
   <!-- TOP LEVEL JS FUNCTIONS -->
   <script type="text/javascript">
-    $(document).on("click", "li", function() {
-      alert("clicked");
-    });
+
   </script>
   
   <!-- VIEW SPECIFIC JS FUNCTIONS -->
