--- a/bookdit/templates/bookdit/home/index.html
+++ b/bookdit/templates/bookdit/home/index.html
@@ -6,16 +6,15 @@
   
   <div class="mdl-grid">
     <!-- Search Bar -->
-    <div class="mdl-cell mdl-cell--9-col">
+    <div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--3-col-phone">
       <input type="text" class="form-control" placeholder="Search Vendor, Service, Location, or Keywords">        
     </div>
-    <div class="mdl-cell mdl-cell--1-col">
+    
+    <div class="mdl-cell mdl-cell--1-col-desktop mdl-cell--1-col-phone">
       <button class="mdl-button mdl-js-button mdl-button--icon">
         <i class="material-icons">search</i>
       </button>
     </div>
-    <div class="mdl-cell mdl-cell--2-col"></div>
-
     
     <!-- MapBox via Leaflet -->
     <div class="mdl-cell mdl-cell--10-col">
@@ -24,12 +23,12 @@
 
     
     <!-- RIGHT-HAND Advertisement -->
-    <div class="mdl-cell mdl-cell--2-col">
+    <div class="mdl-cell mdl-cell--2-col mdl-layout--large-screen-only">
       Ad Here
     </div>
     
     <!-- BOTTOM Advertisement -->
-    <div class="mdl-cell mdl-cell--12-col">
+    <div class="mdl-cell mdl-cell--12-col mdl-layout--small-screen-only">
       Ad Here
     </div>
   </div>
