--- a/bookdit/templates/bookdit/home/login.html
+++ b/bookdit/templates/bookdit/home/login.html
@@ -13,7 +13,7 @@
 </div>
 
 <!-- Login form -->
-<form action="{% url 'bookdit:login_request' %}" method="post">
+<form action="{% url 'login_request' %}" method="post">
 {% csrf_token %}
 	<div class="mdl-grid">
 		<div class="mdl-cell mdl-cell--12-col">
