--- a/bookdit/templates/bookdit/_layout.html
+++ b/bookdit/templates/bookdit/_layout.html
@@ -40,8 +40,14 @@
               {% if request.user.is_authenticated %}
                 <form action="{% url 'logout_request' %}" method="POST">
                   {% csrf_token %}
-                  <button class="mdl-button mdl-js-button">
-                    Logout {{ request.user.username }}
+                  <button class="mdl-button mdl-js-button white">
+                    {{ request.user.first_name }}
+                  </button>
+                </form>
+              {% else %}
+                <form action="{% url 'vlogin' %}" method="GET">
+                  <button class="mdl-button mdl-js-button white">
+                    Login
                   </button>
                 </form>
               {% endif %}
@@ -50,23 +56,26 @@
         </div>
       </header>
       
-      <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Bookdit</span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="">Favorites</a>
-          <a class="mdl-navigation__link" href="">My Account</a>
-          <a class="mdl-navigation__link" href="">
-          {% if request.user.is_authenticated %}
-              <form action="{% url 'logout_request' %}" method="POST">
-                {% csrf_token %}
-                <button class="mdl-button mdl-js-button">
-                  Logout {{ request.user.username }}
-                </button>
-              </form>
-            {% endif %}
-          </a>
-        </nav>
-      </div>
+      <!-- DRAWER (Only for authenticated users)-->
+      {% if request.user.is_authenticated %}
+        <div class="mdl-layout__drawer">
+          <span class="mdl-layout-title">Bookdit</span>
+          <nav class="mdl-navigation">
+            <a class="mdl-navigation__link" href="">Favorites</a>
+            <a class="mdl-navigation__link" href="">My Account</a>
+            <a class="mdl-navigation__link" href="">
+            {% if request.user.is_authenticated %}
+                <form action="{% url 'logout_request' %}" method="POST">
+                  {% csrf_token %}
+                  <button class="mdl-button mdl-js-button">
+                    Logout {{ request.user.username }}
+                  </button>
+                </form>
+              {% endif %}
+            </a>
+          </nav>
+        </div>
+      {% endif %}
       
       <main class="mdl-layout__content">
         <div class="page-content">
