--- a/bookdit/templates/bookdit/auth/register.html
+++ b/bookdit/templates/bookdit/auth/register.html
@@ -1,1 +1,74 @@
-Registration
+{% extends "bookdit/_layout.html" %}
+
+{% block content %}
+<div class="mdl-grid">
+	<div class="mdl-cell mdl-cell--12-col">
+		<!-- Show error if there is one -->
+		{% if error_message %}
+			<p>{{error_message}}</p>
+		{% endif %}
+	</div>
+	
+	<!-- Login form -->
+	<form method="post">
+	{% csrf_token %}
+		<div class="mdl-grid">
+		
+			<div class="mdl-cell mdl-cell--6-col">			
+				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+					<input class="mdl-textfield__input" type="text" id="login_username" name="login_username">
+					<label class="mdl-textfield__label" for="login_username">Username</label>
+				</div>
+			</div>
+			
+			<div class="mdl-cell mdl-cell--6-col">
+				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+					<input class="mdl-textfield__input" type="text" id="login_first_name" name="login_first_name">
+					<label class="mdl-textfield__label" for="login_first_name">First Name</label>
+				</div>
+			</div>
+			
+			<div class="mdl-cell mdl-cell--6-col">
+				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+					<input class="mdl-textfield__input" type="text" id="login_password" name="login_password">
+					<label class="mdl-textfield__label" for="login_password">Password</label>
+				</div>
+			</div>
+			
+			<div class="mdl-cell mdl-cell--6-col">
+				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+					<input class="mdl-textfield__input" type="text" id="login_last_name" name="login_last_name">
+					<label class="mdl-textfield__label" for="login_last_name">Last Name</label>
+				</div>
+			</div>
+			
+			<div class="mdl-cell mdl-cell--6-col">
+				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+					<input class="mdl-textfield__input" type="text" id="login_password_duplicate" name="login_password_duplicate">
+					<label class="mdl-textfield__label" for="login_password_duplicate">Password Again</label>
+				</div>
+			</div>
+			
+			<div class="mdl-cell mdl-cell--6-col">
+				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+					<input class="mdl-textfield__input" type="text" id="login_email" name="login_email">
+					<label class="mdl-textfield__label" for="login_email">Email Address</label>
+				</div>
+			</div>
+			
+			<div class="mdl-cell mdl-cell--12-col">
+				<button formaction="{% url 'register_request' %}" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+					Register Your BookdIt Account
+				</button>
+			</div>
+			
+		</div>
+	</form>
+
+</div>
+
+
+	
+	
+	
+{% endblock %}
